--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,15 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+
+.order-icon {
+  width: 1rem;
+  height: 1rem;
+  transition: all 300ms ease-in-out;
+
+  &.order-desc {
+    transform: rotate(180deg);
+    transform-origin: center;
+  }
+}
